# chdr-rs

./: .gitmodules  Cargo.toml
examples/: show_cd_track_metadata.rs
src/: lib.rs  metadata.rs
sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
sys/examples/: open_chd.rs
sys/src/: lib.rs  pregenerated_bindings.rs
