[package]
name = "chdr-sys"
version = "0.1.0"
authors = ["Niels Wießner <n.h.wiessner@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.54.0", optional = true }
cmake = "0.1.45"